fix img spacing in Bio

--- a/main.css
+++ b/main.css
@@ -208,6 +208,11 @@ header a {
         border: 0;
         text-align: left;
     }
+    
+    article img {
+        width: 60%;
+        margin: 2em 0 0 0;
+    }
 }
 
 @media only screen and (min-width: 768px) {
@@ -216,6 +221,11 @@ header a {
         margin: 1% auto;
         padding: 0;
         border: 0;
+    }
+    
+    article img {
+        width: 40%;
+        margin: 4em 0 0 0;
     }
 }
     
@@ -293,8 +303,8 @@ article ul li ul {
         width: 60%;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 5%;
-        margin-bottom: 1%;
+        margin-top: 3em;
+        margin-bottom: 1em;
         padding: 0;
         border: 0;
         text-align: center;
